trying to resolve pipeline issues

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
     <!-- About Me Section -->
 <section id="about" class="section background-section">
     <div class="background-content">
-        <img src="/Users/lin/Documents/CS 409 Project/mp1/src/assets/images/image.png" alt="Lin Kim, a CS student and photographer" class="profile"/>
+        <img src="./assets/images/image.png" alt="Lin Kim, a CS student and photographer" class="profile"/>
         <div class="text-content">
             <h1>My name is Lin Kim</h1>
             <p>
@@ -123,13 +123,13 @@
         <h2 id="gallery-heading">My Hobby : Photography</h2>
         <div class="gallery" role="region" aria-roledescription="carousel" aria-labelledby="gallery-heading">
             <div class="gallery-slide active">
-                <img src="/Users/lin/Documents/CS 409 Project/mp1/src/assets/images/image1.jpg" alt="Photo 1" class="gallery-image" loading="lazy">
+                <img src="./assets/images/image1.jpg" alt="Photo 1" class="gallery-image" loading="lazy">
             </div>
             <div class="gallery-slide">
-                <img src="/Users/lin/Documents/CS 409 Project/mp1/src/assets/images/image2.jpg" alt="Photo 2" class="gallery-image" loading="lazy">
+                <img src="./assets/images/image2.jpg" alt="Photo 2" class="gallery-image" loading="lazy">
             </div>
             <div class="gallery-slide">
-                <img src="/Users/lin/Documents/CS 409 Project/mp1/src/assets/images/image3.jpg" alt="Phto 3" class="gallery-image" loading="lazy">
+                <img src="./assets/images/image3.jpg" alt="Phto 3" class="gallery-image" loading="lazy">
             </div>
             <!-- Navigation Arrows with Correct Classes -->
             <button class="new-prev-button gallery-prev" aria-label="Previous Slide">
@@ -151,7 +151,7 @@
     <section id="video" class="section video-section">
         <div class="video-container">
             <video controls autoplay muted loop>
-                <source src="/Users/lin/Documents/CS 409 Project/mp1/src/assets/videos/video.mp4" type="video/mp4">
+                <source src="./assets/videos/video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
