removed the video, changed text colors

--- a/src/index.html
+++ b/src/index.html
@@ -83,81 +83,83 @@
     </div>
 </div>
 
-    <!-- Projects Section -->
-    <section id="projects" class="section projects-section">
-        <h2 id="projects-heading">My CS Projects</h2>
-        <div class="projects-container" role="region" aria-roledescription="list" aria-labelledby="projects-heading">
-            <!-- Project 1 -->
-            <div class="project-item">
-                <a href="https://github.com/RieunLinKim/Medical-AI-for-Sepsis-Prediction" target="_blank" rel="noopener noreferrer">
-                    <h3 class="Specimen Image">Medical AI for <br>Early Sepsis Prediction</h3>
-                    <p class="project-description">Ensemble of machine learning models for time-series data for sepsis prediction</p>
-                </a>
-            </div>
-            <!-- Project 2 -->
-            <div class="project-item">
-                <a href="https://colab.research.google.com/drive/1h6Sfqp07JgW9SCrzFhCEZ0ojjXII4P8_#scrollTo=8KR3X_OFHQrj" target="_blank" rel="noopener noreferrer">
-                    <h3 class="Specimen Image">BTTAI x NYBG AI Studio</h3>
-                    <p class="project-description">Specimen image classification for the New York Botanical Garden</p>
-                </a>
-            </div>
-            <!-- Project 3 -->
-            <div class="project-item">
-                <a href="https://drive.google.com/file/d/1HISm0aE4hsbzQEmef01mYW6GnohQeky_/view?usp=sharing" target="_blank" rel="noopener noreferrer">
-                    <h3 class="project-title">Dreamers, Inc.</h3>
-                    <p class="project-description">Financial market price prediction with machine learning models for time-series data</p>
-                </a>
-            </div>
-            <!-- Project 4 -->
-            <div class="project-item">
-                <a href="https://drive.google.com/file/d/1D-z2VAGf4NwmCb3wYuXH0q5PlLUtju2h/view?usp=sharing" target="_blank" rel="noopener noreferrer">
-                    <h3 class="project-title">Quadrotor Flight Demonstration</h3>
-                    <p class="project-description">Drone flight demonstration in a robot-environment interaction system and simulations</p>
-                </a>
-            </div>
+<!-- Projects Section -->
+<section id="projects" class="section projects-section">
+    <h2 id="projects-heading">My CS Projects</h2>
+    <div class="projects-container" role="region" aria-roledescription="list" aria-labelledby="projects-heading">
+        <!-- Project 1 -->
+        <div class="project-item">
+            <a href="https://github.com/RieunLinKim/Medical-AI-for-Sepsis-Prediction" target="_blank" rel="noopener noreferrer">
+                <h3 class="Specimen Image">Medical AI for <br>Early Sepsis Prediction</h3>
+                <p class="project-description">Ensemble of machine learning models for time-series data for sepsis prediction</p>
+            </a>
         </div>
-    </section>
-
-    <!-- Photography Section -->
-    <section id="gallery" class="section full-screen-gallery">
-        <h2 id="gallery-heading">My Hobby : Photography</h2>
-        <div class="gallery" role="region" aria-roledescription="carousel" aria-labelledby="gallery-heading">
-            <div class="gallery-slide active">
-                <img src="./assets/images/image1.jpg" alt="Photo 1" class="gallery-image" loading="lazy">
-            </div>
-            <div class="gallery-slide">
-                <img src="./assets/images/image2.jpg" alt="Photo 2" class="gallery-image" loading="lazy">
-            </div>
-            <div class="gallery-slide">
-                <img src="./assets/images/image3.jpg" alt="Phto 3" class="gallery-image" loading="lazy">
-            </div>
-            <!-- Navigation Arrows with Correct Classes -->
-            <button class="new-prev-button gallery-prev" aria-label="Previous Slide">
-                <i class="fas fa-chevron-left"></i>
-            </button>
-            <button class="new-next-button gallery-next" aria-label="Next Slide">
-                <i class="fas fa-chevron-right"></i>
-            </button>
-            <!-- Indicator Dots -->
-            <div class="gallery-indicators">
-                <span class="indicator active" data-slide="0"></span>
-                <span class="indicator" data-slide="1"></span>
-                <span class="indicator" data-slide="2"></span>
-            </div>
+        <!-- Project 2 -->
+        <div class="project-item">
+            <a href="https://colab.research.google.com/drive/1h6Sfqp07JgW9SCrzFhCEZ0ojjXII4P8_#scrollTo=8KR3X_OFHQrj" target="_blank" rel="noopener noreferrer">
+                <h3 class="Specimen Image">BTTAI x NYBG AI Studio</h3>
+                <p class="project-description">Specimen image classification for the New York Botanical Garden</p>
+            </a>
         </div>
-    </section>
-
-    <!-- Video Section -->
-    <section id="video" class="section video-section">
-        <div class="video-container">
-            <video controls autoplay muted loop>
-                <source src="./assets/videos/video.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+        <!-- Project 3 -->
+        <div class="project-item">
+            <a href="./assets/Dreamers - Beat the Financial Market.pdf" target="_blank" rel="noopener noreferrer">
+                <h3 class="project-title">Dreamers, Inc.</h3>
+                <p class="project-description">Financial market price prediction with machine learning models for time-series data</p>
+            </a>
         </div>
-    </section>
+        <!-- Project 4 -->
+        <div class="project-item">
+            <a href="./assets/SURF 2022 Poster - Rieun "Lin" Kim.pdf" target="_blank" rel="noopener noreferrer">
+                <h3 class="project-title">Quadrotor Flight Demonstration</h3>
+                <p class="project-description">Drone flight demonstration in a robot-environment interaction system and simulations</p>
+            </a>
+        </div>
+    </div>
+</section>
 
-    <!-- Footer -->
+<!-- Photography Section -->
+<section id="gallery" class="section full-screen-gallery">
+    <h2 id="gallery-heading">My Hobby : Photography</h2>
+    <div class="gallery" role="region" aria-roledescription="carousel" aria-labelledby="gallery-heading">
+        <div class="gallery-slide active">
+            <img src="./assets/images/image1.jpg" alt="Photo 1" class="gallery-image" loading="lazy">
+        </div>
+        <div class="gallery-slide">
+            <img src="./assets/images/image2.jpg" alt="Photo 2" class="gallery-image" loading="lazy">
+        </div>
+        <div class="gallery-slide">
+            <img src="./assets/images/image3.jpg" alt="Phto 3" class="gallery-image" loading="lazy">
+        </div>
+        <!-- Navigation Arrows with Correct Classes -->
+        <button class="new-prev-button gallery-prev" aria-label="Previous Slide">
+            <i class="fas fa-chevron-left"></i>
+        </button>
+        <button class="new-next-button gallery-next" aria-label="Next Slide">
+            <i class="fas fa-chevron-right"></i>
+        </button>
+        <!-- Indicator Dots -->
+        <div class="gallery-indicators">
+            <span class="indicator active" data-slide="0"></span>
+            <span class="indicator" data-slide="1"></span>
+            <span class="indicator" data-slide="2"></span>
+        </div>
+    </div>
+</section>
+
+<!--
+Video Section
+<section id="video" class="section video-section">
+    <div class="video-container">
+        <video controls autoplay muted loop>
+            <source src="./assets/videos/video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+</section>
+-->
+
+<!-- Footer -->
 <footer>
     <p>&copy; 2024 Lin Kim</p>
 </footer>
