adjusted directory for scss, js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
     <!-- Link to Compiled CSS -->
-    <link rel="stylesheet" href="css/main.scss">
+    <link rel="stylesheet" href="src/css/main.scss">
 </head>
 <body>
     <!-- Navbar -->
@@ -165,6 +165,6 @@ Video Section
 </footer>
 
     <!-- compiled JS -->
-    <script src="js/main.js"></script>
+    <script src="src/js/main.js"></script>
 </body>
 </html>
