fixed .scss issue

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
     <!-- Link to Compiled CSS -->
-    <link rel="stylesheet" href="src/css/main.scss">
+    <!-- <link rel="stylesheet" href="main.css"> -->
 </head>
 <body>
     <!-- Navbar -->
