trying to solve barebones html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="#about" class="navbar-item">About Me</a>
             <a href="#projects" class="navbar-item">Projects</a>
             <a href="#gallery" class="navbar-item">Photography</a>
-            <a href="#video" class="navbar-item">Video</a>
+            <!--<a href="#video" class="navbar-item">Video</a>-->
         </div>
     </nav>
     
