trying to solve barebones html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
+
     <!-- Link to Compiled CSS -->
-    <!-- <link rel="stylesheet" href="main.css"> -->
+    <link rel="stylesheet" href="main.css">
+
+    <!-- Include bundle.js -->
+    <script defer src="./bundle.js"></script>
+
+    <!-- compiled JS -->
+    <script src="src/js/main.js"></script>
+
 </head>
 <body>
     <!-- Navbar -->
@@ -163,8 +171,5 @@ Video Section
 <footer>
     <p>&copy; 2024 Lin Kim</p>
 </footer>
-
-    <!-- compiled JS -->
-    <script src="src/js/main.js"></script>
 </body>
 </html>
