--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <title>Personal Website</title>
 
 
-    <!-- compiled JS -->
-    <script src="src/js/main.js"></script>
-
 </head>
 <body>
     <!-- Navbar -->
@@ -106,14 +103,14 @@
         </div>
         <!-- Project 3 -->
         <div class="project-item">
-            <a href="src/assets/Dreamers - Beat the Financial Market.pdf" target="_blank" rel="noopener noreferrer">
+            <a href="src/assets/Dreamers - Beat the Financial Market.pdf" alt="..." target="_blank" rel="noopener noreferrer">
                 <h3 class="project-title">Dreamers, Inc.</h3>
                 <p class="project-description">Financial market price prediction with machine learning models for time-series data</p>
             </a>
         </div>
         <!-- Project 4 -->
         <div class="project-item">
-            <a href="src/assets/SURF 2022 Poster - Rieun "Lin" Kim.pdf" target="_blank" rel="noopener noreferrer">
+            <a href="src/assets/SURF 2022 Poster - Rieun "Lin" Kim.pdf" alt="..." target="_blank" rel="noopener noreferrer">
                 <h3 class="project-title">Quadrotor Flight Demonstration</h3>
                 <p class="project-description">Drone flight demonstration in a robot-environment interaction system and simulations</p>
             </a>
