Move dist contents to root

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Personal Website</title>
 
 
-</head>
+<script defer src="bundle.d90ffd927af2be6c788a.js"></script><link href="main.30889b938e8586b4ca8d.css" rel="stylesheet"></head>
 <body>
     <!-- Navbar -->
     <nav class="navbar">
@@ -32,7 +32,7 @@
     <!-- About Me Section -->
 <section id="about" class="section background-section">
     <div class="background-content">
-        <img src="src/assets/images/image.png" alt="Lin Kim, a CS student and photographer" class="profile"/>
+        <img src="assets/images/image.png" alt="Lin Kim, a CS student and photographer" class="profile"/>
         <div class="text-content">
             <h1>My name is Lin Kim</h1>
             <p>
@@ -123,13 +123,13 @@
     <h2 id="gallery-heading">My Hobby : Photography</h2>
     <div class="gallery" role="region" aria-roledescription="carousel" aria-labelledby="gallery-heading">
         <div class="gallery-slide active">
-            <img src="src/assets/images/image1.jpg" alt="Photo 1" class="gallery-image" loading="lazy">
+            <img src="assets/images/image1.jpg" alt="Photo 1" class="gallery-image" loading="lazy">
         </div>
         <div class="gallery-slide">
-            <img src="src/assets/images/image2.jpg" alt="Photo 2" class="gallery-image" loading="lazy">
+            <img src="assets/images/image2.jpg" alt="Photo 2" class="gallery-image" loading="lazy">
         </div>
         <div class="gallery-slide">
-            <img src="src/assets/images/image3.jpg" alt="Phto 3" class="gallery-image" loading="lazy">
+            <img src="assets/images/image3.jpg" alt="Phto 3" class="gallery-image" loading="lazy">
         </div>
         <!-- Navigation Arrows with Correct Classes -->
         <button class="new-prev-button gallery-prev" aria-label="Previous Slide">
