deploy: 1941dacb3e023e15909237d3cb25d254f7335966

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Personal Website</title>
 
 
-<script defer src="bundle.d90ffd927af2be6c788a.js"></script><link href="main.30889b938e8586b4ca8d.css" rel="stylesheet"></head>
+<script defer src="bundle.d90ffd927af2be6c788a.js"></script><link href="main.30889b938e8586b4ca8d.css" rel="stylesheet"><script defer src="bundle.d90ffd927af2be6c788a.js"></script><link href="main.30889b938e8586b4ca8d.css" rel="stylesheet"></head>
 <body>
     <!-- Navbar -->
     <nav class="navbar">
