--- a/index.html
+++ b/index.html
@@ -89,28 +89,28 @@
     <div class="projects-container" role="region" aria-roledescription="list" aria-labelledby="projects-heading">
         <!-- Project 1 -->
         <div class="project-item">
-            <a href="https://github.com/RieunLinKim/Medical-AI-for-Sepsis-Prediction" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/RieunLinKim/Medical-AI-for-Sepsis-Prediction" alt="github repository for Medical AI" target="_blank" rel="noopener noreferrer">
                 <h3 class="Specimen Image">Medical AI for <br>Early Sepsis Prediction</h3>
                 <p class="project-description">Ensemble of machine learning models for time-series data for sepsis prediction</p>
             </a>
         </div>
         <!-- Project 2 -->
         <div class="project-item">
-            <a href="https://colab.research.google.com/drive/1h6Sfqp07JgW9SCrzFhCEZ0ojjXII4P8_#scrollTo=8KR3X_OFHQrj" target="_blank" rel="noopener noreferrer">
+            <a href="https://colab.research.google.com/drive/1h6Sfqp07JgW9SCrzFhCEZ0ojjXII4P8_#scrollTo=8KR3X_OFHQrj" alt= "Google Colab notebook for NYBG image classification" target="_blank" rel="noopener noreferrer">
                 <h3 class="Specimen Image">BTTAI x NYBG AI Studio</h3>
                 <p class="project-description">Specimen image classification for the New York Botanical Garden</p>
             </a>
         </div>
         <!-- Project 3 -->
         <div class="project-item">
-            <a href="src/assets/Dreamers - Beat the Financial Market.pdf" alt="..." target="_blank" rel="noopener noreferrer">
+            <a href="src/assets/Dreamers - Beat the Financial Market.pdf" alt="Dreamers presentation" target="_blank" rel="noopener noreferrer">
                 <h3 class="project-title">Dreamers, Inc.</h3>
                 <p class="project-description">Financial market price prediction with machine learning models for time-series data</p>
             </a>
         </div>
         <!-- Project 4 -->
         <div class="project-item">
-            <a href="src/assets/SURF 2022 Poster - Rieun "Lin" Kim.pdf" alt="..." target="_blank" rel="noopener noreferrer">
+            <a href="src/assets/SURF Poster" alt="SURF poster for flight demonstration" target="_blank" rel="noopener noreferrer">
                 <h3 class="project-title">Quadrotor Flight Demonstration</h3>
                 <p class="project-description">Drone flight demonstration in a robot-environment interaction system and simulations</p>
             </a>
